# Mlopd-test

./: .dockerignore  .env.example  .gitignore  01.Understand_EDA.ipynb  Dockerfile  README.md  docker-compose.yml  problems_definition.ipynb  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  rossmann-ci-workflow.yaml  rossmann-pipeline.yaml  streamlit-ci.yaml
app/: main.py  streamlit_app.py
configs/: config.yaml  model_config.yaml
data/: store.csv.dvc  test.csv.dvc  train.csv.dvc
data/processed/: test_final.csv
models/: feature_importance_lgb.csv  lgb_model_v1.pkl
notebooks/: 02.processing.ipynb  03.experimentation.ipynb
scripts/: monitor.py  retrain.py  run_pipeline.bat  run_pipeline.py  test_predict.py
src/: 00.problems_definition.ipynb
src/rossmann_mlops/: __init__.py  config.py  features.py  monitoring.py  predict.py  processing.py  train.py  train_model.py
tests/: test_monitoring_smoke.py  test_pipeline_smoke.py
